--- a/DocumentManagerUI/Pages/Picture/CreatePictureForm.razor
+++ b/DocumentManagerUI/Pages/Picture/CreatePictureForm.razor
@@ -166,7 +166,7 @@
         }
         catch (Exception ex)
         {
-            ShowModal(ex.Message + "ssssss");
+            await ShowModal(ex.Message + "ssssss");
         }
         
     }
