--- a/DocumentManagerUI/Pages/File/EditFileForm.razor
+++ b/DocumentManagerUI/Pages/File/EditFileForm.razor
@@ -122,6 +122,8 @@
 
     [Parameter]
     public FileResponse File { get; set; }
+    [Parameter]
+    public string FileManagersApi { get; set; }
 
     public FileObjectResponse fileTmp = new FileObjectResponse();
     string size;
@@ -156,7 +158,7 @@
         {
             if (File.FileObject == null)
             {
-                //GetFileObject();
+               
                 Console.WriteLine(this);
                 return "";
             }
@@ -198,24 +200,11 @@
                         throw new Exception("Mutable object not found");
                     }
                 }
-
-                /*size = ConvertingValueFromBytes(file.Size, 0);
-                using var fileContent = file.OpenReadStream(maxFileSize);
-                using var ms = new MemoryStream();
-                await fileContent.CopyToAsync(ms);
-
-           
-                fileTmp = new FileObjectResponse(file.Name, ms.ToArray(), file.Type);
-
-                if (File.FileObject == null)
-                {
-                    throw new Exception("Mutable object not found");
-                }*/
             }
         }
         catch (Exception ex)
         {
-            ShowModal(ex.Message); 
+            await ShowModal(ex.Message); 
         }
     }
 
@@ -231,15 +220,15 @@
                 fileTmp = File.FileObject;
             }
 
-            var statusInfo2 = await Http.PutAsJsonAsync($"https://localhost:5006/api/FilePayload/file/{File.Id}", fileTmp);
+            var statusInfo2 = await Http.PutAsJsonAsync($"{FileManagersApi}/FilePayload/file/{File.Id}", fileTmp);
             if (!statusInfo2.IsSuccessStatusCode)
             {
-                await Http.DeleteAsync($"https://localhost:5006/api/FileDescription/{File.Id}");
+                await Http.DeleteAsync($"{FileManagersApi}/api/FileDescription/{File.Id}");
                 throw new Exception("Error - 500. Internal Server Error - Put");
             }
             param = 1;
             File.Size = size;
-            var statusInfo1 = await Http.PutAsJsonAsync($"https://localhost:5006/api/FileDescription/{File.Id}", File);
+            var statusInfo1 = await Http.PutAsJsonAsync($"{FileManagersApi}/api/FileDescription/{File.Id}", File);
             if (!statusInfo1.IsSuccessStatusCode)
             {
                 throw new Exception("Error - 500. Internal Server Error - Put");
@@ -252,7 +241,7 @@
         }
         catch (Exception e)
         {
-            ShowModal(e.Message);
+            await ShowModal(e.Message);
         }
         
     }
@@ -262,7 +251,7 @@
         FileObjectResponse fileObject = new FileObjectResponse();
         if (File.Id != Guid.Empty)
         {
-            fileObject = await Http.GetFromJsonAsync<FileObjectResponse>($"https://localhost:5006/api/FilePayload/client/{File.Id}");
+            fileObject = await Http.GetFromJsonAsync<FileObjectResponse>($"{FileManagersApi}/api/FilePayload/client/{File.Id}");
         }
         File.FileObject = fileObject;
         StateHasChanged();
