--- a/DocumentManagerUI/Pages/Picture/Picture.razor
+++ b/DocumentManagerUI/Pages/Picture/Picture.razor
@@ -73,7 +73,7 @@
             <CloseButton/>
         </ModalHeader>
         <ModalBody>
-            <EditPictureForm Picture="file"></EditPictureForm>
+            <EditPictureForm Picture="file" PictureManagersApi="@PictureManagersApi"></EditPictureForm>
         </ModalBody>
     </ModalContent>
 </Modal>
@@ -123,7 +123,7 @@
 
     PictureResponse file = new PictureResponse();
     PictureObjectResponse payloadFile = new();
-    
+
     MultipartFormDataContent content = new MultipartFormDataContent();
     public Modal modalCreateRef { get; set; }
     public Modal modalChangeRef { get; set; }
@@ -131,10 +131,10 @@
 
     protected override async Task OnInitializedAsync()
     {
-            if (fileList == null)
-            {
-                fileList = new();
-            }
+        if (fileList == null)
+        {
+            fileList = new();
+        }
         await ResetCollection();
         StateHasChanged();
     }
@@ -176,7 +176,7 @@
 
     private async Task CopyTextToClipboard(Guid id)
     {
-        
+
         var tmpFile = await GetFileObject(id);
         var tmp = $"<img src=\"data:{tmpFile.PictureObject.PictureTypeMime};base64,{Convert.ToBase64String(tmpFile.PictureObject.PictureScale)}\">";
         await JSRuntime.InvokeVoidAsync("clipboardCopy.copyText", tmp);
@@ -202,17 +202,24 @@
 
     private async Task ResetCollection()
     {
-        var doc = await Http.GetFromJsonAsync<Document>($"{DocumentManagerApi}/DocumentPictures/{IdDocument}");
-        fileList.Clear();
-        foreach (var file in doc.Pictures)
+        try
         {
-            var fileOb = await Http.GetFromJsonAsync<PictureResponse>($"{PictureManagersApi}/PictureDescription/{file.PictureId}");
-            fileOb.PictureObject = await Http.GetFromJsonAsync<PictureObjectResponse>($"{PictureManagersApi}/PicturePayload/scale/{fileOb.Id}");
-            fileList.Add(fileOb);
-            
+            var doc = await Http.GetFromJsonAsync<Document>($"{DocumentManagerApi}/DocumentPictures/{IdDocument}");
+            fileList.Clear();
+            foreach (var file in doc.Pictures)
+            {
+                var fileOb = await Http.GetFromJsonAsync<PictureResponse>($"{PictureManagersApi}/PictureDescription/{file.PictureId}");
+                fileOb.PictureObject = await Http.GetFromJsonAsync<PictureObjectResponse>($"{PictureManagersApi}/PicturePayload/scale/{fileOb.Id}");
+                fileList.Add(fileOb);
+
+            }
+            StateHasChanged();
         }
-        StateHasChanged();
-        
+        catch (Exception e)
+        {
+            int t = 8;
+
+        }
     }
 
     private async Task<PictureResponse> GetFileObject(Guid Id)
